==> Domele/Young-tree-of-the-studio-nRF52832/3-例程/02_BLE/case3_ble_serival_IIC_oled/user/OLED.C <==
#include "oled.h"
#include "nrf52.h"
#include "nrf_gpio.h"

void LCD_WrDat(unsigned char dat)	 
{
		unsigned char i;
		nrf_gpio_pin_set(LCD_DC);
		//LCD_DC=1;  
		for(i=0;i<8;i++) //发送一个八位数据 
		{
			if((dat << i) & 0x80)
			{nrf_gpio_pin_set(LCD_SDA);}
			//{LCD_SDA  = 1;}
			else
			//  LCD_SDA  = 0;
			nrf_gpio_pin_clear(LCD_SDA);
			
			nrf_gpio_pin_clear(LCD_SCL);
			LCD_DLY_us(1);
			nrf_gpio_pin_set(LCD_SCL);
			LCD_DLY_us(1);
			//LCD_SCL = 0;
			//LCD_SCL = 1;
		}
}

void LCD_WrCmd(unsigned char cmd)
{
			unsigned char i;
			nrf_gpio_pin_clear(LCD_DC);
			//LCD_DC=0;
			for(i=0;i<8;i++) //发送一个八位数据 
			{
				if((cmd << i) & 0x80)
				//{LCD_SDA  = 1;}
				{nrf_gpio_pin_set(LCD_SDA);}
				else 
					//	LCD_SDA  = 0;
					nrf_gpio_pin_clear(LCD_SDA);
				
				nrf_gpio_pin_clear(LCD_SCL);
				LCD_DLY_us(1);
				nrf_gpio_pin_set(LCD_SCL);
				LCD_DLY_us(1);
				//LCD_SCL = 0;
				//LCD_SCL = 1;
			}
}

void LCD_Init(void)     
{  
nrf_gpio_pin_set(LCD_SCL);
//LCD_SCL=1;
nrf_gpio_pin_clear(LCD_RST);
//LCD_RST=0;
//LCD_DLY_ms(50);
nrf_gpio_pin_set(LCD_RST);
//LCD_RST=1;       //从上电到下面开始初始化要有足够的时间，即等待RC复位完毕   
LCD_WrCmd(0xae);//--turn off oled panel
LCD_WrCmd(0x00);//---set low column address
LCD_WrCmd(0x10);//---set high column address
LCD_WrCmd(0x40);//--set start line address  Set Mapping RAM Display Start Line (0x00~0x3F)
LCD_WrCmd(0x81);//--set contrast control register
LCD_WrCmd(0xcf); // Set SEG Output Current Brightness
	//LCD_WrCmd(0xcf); // Set SEG Output Current Brightness
LCD_WrCmd(0xa1);//--Set SEG/Column Mapping     0xa0左右反置 0xa1正常
LCD_WrCmd(0xc8);//Set COM/Row Scan Direction   0xc0上下反置 0xc8正常
LCD_WrCmd(0xa6);//--set normal display
LCD_WrCmd(0xa8);//--set multiplex ratio(1 to 64)
LCD_WrCmd(0x3f);//--1/64 duty
LCD_WrCmd(0xd3);//-set display offset	Shift Mapping RAM Counter (0x00~0x3F)
LCD_WrCmd(0x00);//-not offset
LCD_WrCmd(0xd5);//--set display clock divide ratio/oscillator frequency
LCD_WrCmd(0x80);//--set divide ratio, Set Clock as 100 Frames/Sec
LCD_WrCmd(0xd9);//--set pre-charge period
LCD_WrCmd(0xf1);//Set Pre-Charge as 15 Clocks & Discharge as 1 Clock
LCD_WrCmd(0xda);//--set com pins hardware configuration
LCD_WrCmd(0x12);
LCD_WrCmd(0xdb);//--set vcomh
LCD_WrCmd(0x40);//Set VCOM Deselect Level
LCD_WrCmd(0x20);//-Set Page Addressing Mode (0x00/0x01/0x02)
LCD_WrCmd(0x02);//
LCD_WrCmd(0x8d);//--set Charge Pump enable/disable
LCD_WrCmd(0x14);//--set(0x10) disable
LCD_WrCmd(0xa4);// Disable Entire Display On (0xa4/0xa5)
LCD_WrCmd(0xa6);// Disable Inverse Display On (0xa6/a7) 
LCD_WrCmd(0xaf);//--turn on oled panel
LCD_Fill(0x00);  //初始清屏
LCD_Set_Pos(0,0); 	
}
