==> BayernNo1/Olddriver/src/Sources/C/oled.c <==
#include "includes.h"
#include "oled.h"
#define XLevelL		0x00
#define XLevelH		0x10
#define XLevel		((XLevelH&0x0F)*16+XLevelL)
#define Max_Column	128
#define Max_Row		  64
#define	Brightness	0xCF
#define X_WIDTH 128
#define Y_WIDTH 64

void LCD_WrDat(byte data)
{
  byte i=8;
  //LCD_CS=0;;
  GPIOC_PDOR |=  GPIO_PDOR_PDO(GPIO_PIN(14));;;;
  asm("nop"); 
  GPIOC_PDOR &= ~GPIO_PDOR_PDO(GPIO_PIN(12));;;;
  asm("nop");    
  while(i--)
  {
    if(data&0x80)
    {
      GPIOC_PDOR |=  GPIO_PDOR_PDO(GPIO_PIN(18));;;;
    }
    else
    {
      GPIOC_PDOR &= ~GPIO_PDOR_PDO(GPIO_PIN(18));;;;
    }
    GPIOC_PDOR |=  GPIO_PDOR_PDO(GPIO_PIN(12)); 
    asm("nop");;;;    
    GPIOC_PDOR &= ~GPIO_PDOR_PDO(GPIO_PIN(12));;;;;    
    data<<=1;    
  }
	//LCD_CS=1;
}

void LCD_WrCmd(byte cmd)
{
  byte i=8;
  
  //LCD_CS=0;;
  GPIOC_PDOR &= ~GPIO_PDOR_PDO(GPIO_PIN(14));;;;;
  GPIOC_PDOR &= ~GPIO_PDOR_PDO(GPIO_PIN(12));;;;;
  //asm("nop");   
  while(i--)
  {
    if(cmd&0x80)
    {
      GPIOC_PDOR |=  GPIO_PDOR_PDO(GPIO_PIN(18));;;;;
    }
    else
    {
      GPIOC_PDOR &= ~GPIO_PDOR_PDO(GPIO_PIN(18));;;;;;
    }
    GPIOC_PDOR |=  GPIO_PDOR_PDO(GPIO_PIN(12));;;;;
    asm("nop");;;;
    //asm("nop");             
    GPIOC_PDOR &= ~GPIO_PDOR_PDO(GPIO_PIN(12));;;;;    
    cmd<<=1;;;;;   
  } 	
	//LCD_CS=1;
}

void LCD_Init(void)        
{
  //设置PORTA pin14,pin15为GPIO口 
  PORTC_PCR16=(0|PORT_PCR_MUX(1));
  PORTC_PCR12=(0|PORT_PCR_MUX(1)); 
  PORTC_PCR14=(0|PORT_PCR_MUX(1));
  PORTC_PCR18=(0|PORT_PCR_MUX(1)); 
	
  //设置PORTA pin14,pin15为输出方向;pin16,pin17为输入方向
  GPIOC_PDDR=GPIO_PDDR_PDD(~GPIO_PIN(16)|~GPIO_PIN(12)|GPIO_PIN(14)|GPIO_PIN(18));
  
  GPIOC_PDOR |=  GPIO_PDOR_PDO(GPIO_PIN(12));
  //LCD_CS=1;	//预制SLK和SS为高电平   	
  
  GPIOC_PDOR &= ~GPIO_PDOR_PDO(GPIO_PIN(16));
  LCD_DLY_ms(50);
  GPIOC_PDOR |=  GPIO_PDOR_PDO(GPIO_PIN(16));

  LCD_WrCmd(0xae);//--turn off oled panel
  LCD_WrCmd(0x00);//---set low column address
  LCD_WrCmd(0x10);//---set high column address
  LCD_WrCmd(0x40);//--set start line address  Set Mapping RAM Display Start Line (0x00~0x3F)
  LCD_WrCmd(0x81);//--set contrast control register
  LCD_WrCmd(0xcf); // Set SEG Output Current Brightness
  LCD_WrCmd(0xa1);//--Set SEG/Column Mapping     0xa0左右反置 0xa1正常
  LCD_WrCmd(0xc8);//Set COM/Row Scan Direction   0xc0上下反置 0xc8正常
  LCD_WrCmd(0xa6);//--set normal display
  LCD_WrCmd(0xa8);//--set multiplex ratio(1 to 64)a8
  LCD_WrCmd(0x3f);//--1/64 duty 3f
  LCD_WrCmd(0xd3);//-set display offset	Shift Mapping RAM Counter (0x00~0x3F)
  LCD_WrCmd(0x00);//-not offset
  LCD_WrCmd(0xd5);//--set display clock divide ratio/oscillator frequency
  LCD_WrCmd(0x80);//--set divide ratio, Set Clock as 100 Frames/Sec
  LCD_WrCmd(0xd9);//--set pre-charge period
  LCD_WrCmd(0xf1);//Set Pre-Charge as 15 Clocks & Discharge as 1 Clock
  LCD_WrCmd(0xda);//--set com pins hardware configuration
  LCD_WrCmd(0x12);
  LCD_WrCmd(0xdb);//--set vcomh
  LCD_WrCmd(0x40);//Set VCOM Deselect Level
  LCD_WrCmd(0x20);//-Set Page Addressing Mode (0x00/0x01/0x02)
  LCD_WrCmd(0x02);//
  LCD_WrCmd(0x8d);//--set Charge Pump enable/disable
  LCD_WrCmd(0x14);//--set(0x10) disable
  LCD_WrCmd(0xa4);// Disable Entire Display On (0xa4/0xa5)
  LCD_WrCmd(0xa6);// Disable Inverse Display On (0xa6/a7) 
  LCD_WrCmd(0xaf);//--turn on oled panel
  LCD_Fill(0x00);  //初始清屏
  LCD_Set_Pos(0,0);  
	
}
